--- a/src/main/resources/assets/mubble/lang/en_ud.json
+++ b/src/main/resources/assets/mubble/lang/en_ud.json
@@ -503,10 +503,11 @@
 	"block.mubble.light_gray_cloud_block": "ʞɔolᗺ pnolƆ ʎɐɹפ ʇɥƃᴉ˥",
 	"block.mubble.gray_cloud_block": "ʞɔolᗺ pnolƆ ʎɐɹפ",
 	"block.mubble.black_cloud_block": "ʞɔolᗺ pnolƆ ʞɔɐlq",
-	"block.mubble.tomato": "sǝoʇɐɯo┴",
+	"block.mubble.tomatoes": "sǝoʇɐɯo┴",
 	"block.mubble.salad": "pɐlɐS",
 	"block.mubble.cheese_block": "ʞɔolᗺ ǝsǝǝɥƆ",
 	"block.mubble.ultimatum_portal": "lɐʇɹoԀ ɯnʇɐɯᴉʇl∩",
+	"//block.mubble.minecraft_10th_anniversary_cake": "Minecraft's 10th Anniversary Cake",
 
 	"block.mubble.blue_balloon": "uoollɐq ǝnlq",
 	"block.mubble.light_blue_balloon": "uoollɐq ǝnlq ʇɥƃᴉ˥",
@@ -813,6 +814,7 @@
 
 
 	"item.mubble.chincho_spawn_egg": "ƃƃƎ uʍɐdS oɥɔuᴉɥƆ",
+	"//item.mubble.goomba_spawn_egg": "Goomba Spawn Egg",
 	"item.mubble.toad_spawn_egg": "ƃƃƎ uʍɐdS pɐo┴",
 	"//item.mubble.zombie_cowman_spawn_egg": "Zombie Cowman Spawn Egg",
 
@@ -908,6 +910,9 @@
 	"//subtitles.mubble.entity.chincho.ambient": "Chincho talks",
 	"//subtitles.mubble.entity.chincho.hurt": "Chincho hurts",
 	"//subtitles.mubble.entity.chincho.death": "Chincho dies",
+	"//subtitles.mubble.entity.goomba.crush": "Goomba crushed",
+	"//subtitles.mubble.entity.goomba.hurt": "Goomba hurts",
+	"//subtitles.mubble.entity.goomba.death": "Goomba dies",
 	"subtitles.mubble.entity.toad.ambient": "sǝlqɯnɯ pɐo┴",
 	"subtitles.mubble.entity.toad.hurt": "sʇɹnɥ pɐo┴",
 	"subtitles.mubble.entity.toad.death": "sǝᴉp pɐo┴",
