--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -503,10 +503,11 @@
 	"//block.mubble.light_gray_cloud_block": "<newline>",
 	"//block.mubble.gray_cloud_block": "<newline>",
 	"//block.mubble.black_cloud_block": "<newline>",
-	"//block.mubble.tomato": "<newline>",
+	"//block.mubble.tomatoes": "<newline>",
 	"//block.mubble.salad": "<newline>",
 	"//block.mubble.cheese_block": "<newline>",
 	"//block.mubble.ultimatum_portal": "<newline>",
+	"//block.mubble.minecraft_10th_anniversary_cake": "Minecraft's 10th Anniversary Cake",
 
 	"//block.mubble.blue_balloon": "<newline>",
 	"//block.mubble.light_blue_balloon": "<newline>",
@@ -813,6 +814,7 @@
 
 
 	"//item.mubble.chincho_spawn_egg": "Chincho Spawn Egg",
+	"//item.mubble.goomba_spawn_egg": "Goomba Spawn Egg",
 	"//item.mubble.toad_spawn_egg": "Toad Spawn Egg",
 	"//item.mubble.zombie_cowman_spawn_egg": "Zombie Cowman Spawn Egg",
 
@@ -908,6 +910,9 @@
 	"//subtitles.mubble.entity.chincho.ambient": "Chincho talks",
 	"//subtitles.mubble.entity.chincho.hurt": "Chincho hurts",
 	"//subtitles.mubble.entity.chincho.death": "Chincho dies",
+	"//subtitles.mubble.entity.goomba.crush": "Goomba crushed",
+	"//subtitles.mubble.entity.goomba.hurt": "Goomba hurts",
+	"//subtitles.mubble.entity.goomba.death": "Goomba dies",
 	"subtitles.mubble.entity.toad.ambient": "奇诺比奥:咕哝",
 	"subtitles.mubble.entity.toad.hurt": "奇诺比奥:受伤",
 	"subtitles.mubble.entity.toad.death": "奇诺比奥:死亡",
