--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -950,8 +950,8 @@
 
 
 	"comment": "OTHER",
-	"//item.mubble.snorlax_hat.secret_status": "Tellement paradoxal... :)",
-	"//item.mubble.bandana.secret_status": "C'est pour toi, §6Pixel§r !",
-	"//item.mubble.noteblock_head.secret_status": "Hé ! Je croyais que tu avais déjà ça sur la tête, §6Evan§r !",
-	"//item.mubble.mayro_cap.secret_status": "Franchement, t'es le seul à en avoir le moins besoin, n'est-ce pas, Mr. \"§6Sossie§r\" ?"
+	"item.mubble.snorlax_hat.secret_status": "lol",
+	"item.mubble.bandana.secret_status": "itz for u §6pxl§r!!!1!",
+	"item.mubble.noteblock_head.secret_status": "wut u alredy hav this §6evan§r",
+	"item.mubble.mayro_cap.secret_status": "HOI \"§6Sossie§r\" that uselss to do u know?????"
 }
