--- a/src/main/resources/assets/mubble/lang/zh_cn.json
+++ b/src/main/resources/assets/mubble/lang/zh_cn.json
@@ -953,5 +953,5 @@
 	"//item.mubble.snorlax_hat.secret_status": "Quão paradoxal... :)",
 	"//item.mubble.bandana.secret_status": "Aquilo é para você, §6Pixel§r!",
 	"//item.mubble.noteblock_head.secret_status": "Oi! Eu pensei que você já tinha isso em sua cabeça, §6Evan§r!",
-	"//item.mubble.mayro_cap.secret_status": "Venha, você é quem menos precisa, né, Mr. \"§6Sossie§r\"?"
+	"//item.mubble.mayro_cap.secret_status": "Venha, você é quem menos precisa, né, \"§6Sossie§r\"?"
 }
