--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -953,5 +953,5 @@
 	"//item.mubble.snorlax_hat.secret_status": "How paradoxal... :)",
 	"//item.mubble.bandana.secret_status": "That's for you, §6Pixel§r!",
 	"//item.mubble.noteblock_head.secret_status": "Hey! I thought you already had this on your head, §6Evan§r!",
-	"//item.mubble.mayro_cap.secret_status": "Come on, you're the one who needs it the least, aren't you, Mr. \"§6Sossie§r\"?"
+	"//item.mubble.mayro_cap.secret_status": "Come on, you're the one who needs it the least, aren't you, \"§6Sossie§r\"?"
 }
