--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -953,5 +953,5 @@
 	"item.mubble.snorlax_hat.secret_status": "Tellement paradoxal... :)",
 	"item.mubble.bandana.secret_status": "C'est pour toi, §6Pixel§r !",
 	"item.mubble.noteblock_head.secret_status": "Hé ! Je croyais que tu avais déjà ça sur la tête, §6Evan§r !",
-	"item.mubble.mayro_cap.secret_status": "Franchement, t'es le seul à en avoir le moins besoin, n'est-ce pas, Mr. \"§6Sossie§r\" ?"
+	"item.mubble.mayro_cap.secret_status": "Franchement, t'es le seul à en avoir le moins besoin, n'est-ce pas, \"§6Sossie§r\" ?"
 }
