--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -5,24 +5,41 @@
 
 
 	"comment": "BLOCKS",
-	"block.mubble.oak_vertical_slab": "Eikenhouten verticale plaat",
-	"block.mubble.spruce_vertical_slab": "Sparrenhouten verticale plaat",
-	"block.mubble.birch_vertical_slab": "Berkenhouten verticale plaat",
-	"block.mubble.jungle_vertical_slab": "Oerwoudhouten verticale plaat",
-	"block.mubble.acacia_vertical_slab": "Acaciahouten verticale plaat",
-	"block.mubble.dark_oak_vertical_slab": "Donkereikenhouten verticale plaat",
-	"block.mubble.stone_vertical_slab": "Steenen verticale plaat",
-	"block.mubble.sandstone_vertical_slab": "Zandsteenen verticale plaat",
-	"block.mubble.cobblestone_vertical_slab": "Kiezelstenen verticale plaat",
-	"block.mubble.brick_vertical_slab": "Bakstenen verticale plaat",
-	"block.mubble.stone_brick_vertical_slab": "Blokstenen verticale plaat",
-	"block.mubble.nether_brick_vertical_slab": "Netherstenen verticale plaat",
-	"block.mubble.quartz_vertical_slab": "Kwarts verticale plaat",
-	"block.mubble.red_sandstone_vertical_slab": "Rode Zandstenen verticale plaat",
-	"block.mubble.purpur_vertical_slab": "Purpur verticale plaat",
-	"block.mubble.prismarine_vertical_slab": "Prismarien verticale plaat",
-	"block.mubble.prismarine_brick_vertical_slab": "Prismarienblokstenen verticale plaat",
-	"block.mubble.dark_prismarine_vertical_slab": "Donkereprismarien verticale plaat",
+	"//block.mubble.oak_vertical_slab": "Oak Vertical Slab",
+	"//block.mubble.spruce_vertical_slab": "Spruce Vertical Slab",
+	"//block.mubble.birch_vertical_slab": "Birch Vertical Slab",
+	"//block.mubble.jungle_vertical_slab": "Jungle Vertical Slab",
+	"//block.mubble.acacia_vertical_slab": "Acacia Vertical Slab",
+	"//block.mubble.dark_oak_vertical_slab": "Dark Oak Vertical Slab",
+	"//block.mubble.stone_vertical_slab": "Stone Vertical Slab",
+	"//block.mubble.smooth_stone_vertical_slab": "Smooth Stone Vertical Slab",
+	"//block.mubble.cobblestone_vertical_slab": "Cobblestone Vertical Slab",
+	"//block.mubble.mossy_cobblestone_vertical_slab": "Mossy Cobblestone Vertical Slab",
+	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
+	"//block.mubble.mossy_stone_brick_vertical_slab": "Mossy Stone Brick Vertical Slab",
+	"//block.mubble.granite_vertical_slab": "Granite Vertical Slab",
+	"//block.mubble.polished_granite_vertical_slab": "Polished Granite Vertical Slab",
+	"//block.mubble.diorite_vertical_slab": "Diorite Vertical Slab",
+	"//block.mubble.polished_diorite_vertical_slab": "Polished Diorite Vertical Slab",
+	"//block.mubble.andesite_vertical_slab": "Andesite Vertical Slab",
+	"//block.mubble.polished_andesite_vertical_slab": "Polished Andesite Vertical Slab",
+	"//block.mubble.brick_vertical_slab": "Brick Vertical Slab",
+	"//block.mubble.stone_brick_vertical_slab": "Stone Brick Vertical Slab",
+	"//block.mubble.sandstone_vertical_slab": "Sandstone Vertical Slab",
+	"//block.mubble.cut_sandstone_vertical_slab": "Cut Sandstone Vertical Slab",
+	"//block.mubble.smooth_sandstone_vertical_slab": "Smooth Sandstone Vertical Slab",
+	"//block.mubble.red_sandstone_vertical_slab": "Red Sandstone Vertical Slab",
+	"//block.mubble.cut_red_sandstone_vertical_slab": "Cut Red Sandstone Vertical Slab",
+	"//block.mubble.smooth_red_sandstone_vertical_slab": "Smooth Red Sandstone Vertical Slab",
+	"//block.mubble.nether_brick_vertical_slab": "Nether Brick Vertical Slab",
+	"//block.mubble.red_nether_brick_vertical_slab": "Red Nether Brick Vertical Slab",
+	"//block.mubble.quartz_vertical_slab": "Quartz Vertical Slab",
+	"//block.mubble.smooth_quartz_vertical_slab": "Smooth Quartz Vertical Slab",
+	"//block.mubble.end_stone_brick_vertical_slab": "End Stone Brick Vertical Slab",
+	"//block.mubble.purpur_vertical_slab": "Purpur Vertical Slab",
+	"//block.mubble.prismarine_vertical_slab": "Prismarine Vertical Slab",
+	"//block.mubble.prismarine_brick_vertical_slab": "Prismarine Brick Vertical Slab",
+	"//block.mubble.dark_prismarine_vertical_slab": "Dark Prismarine Vertical Slab",
 
 	"block.mubble.dark_prismarine_wall": "Donkereprismarien muur",
 
@@ -505,8 +522,8 @@
 	"block.mubble.black_cloud_block": "Zwartewolkblok",
 	"block.mubble.tomatoes": "Tomaten",
 	"block.mubble.salad": "Salade",
+	"//block.mubble.blueberry_bush": "Blueberry Bush",
 	"block.mubble.cheese_block": "Kaasblok",
-	"block.mubble.ultimatum_portal": "Ultimatumportaal",
 	"block.mubble.minecraft_10th_anniversary_cake": "Minecraft's tiende jubileum's taart",
 
 	"block.mubble.blue_balloon": "Blauwe ballon",
@@ -530,14 +547,98 @@
 	"block.mubble.fluid_tank": "Vloeistoftank",
 
 
-	"block.mubble.question_block": "?-blok",
-	"block.mubble.empty_block": "Leeg blok",
-	"block.mubble.rotating_block": "Draaiend blok",
-	"block.mubble.light_block": "Licht blok",
-	"block.mubble.brick_block": "Baksteenenblok",
-	"block.mubble.golden_brick_block": "Gouden baksteenenblok",
-	"block.mubble.note_block": "Nootblok",
-	"block.mubble.super_note_block": "Super nootblok",
+
+	"//block.mubble.smb_question_block": "? Block (SMB)",
+	"//block.mubble.smb3_question_block": "? Block (SMB3)",
+	"//block.mubble.smw_question_block": "? Block (SMW)",
+	"//block.mubble.nsmbu_question_block": "? Block (NSMBU)",
+	"//block.mubble.smb_ground_ground_block": "Ground Block (SMB - Ground)",
+	"//block.mubble.smb_underground_ground_block": "Ground Block (SMB - Underground)",
+	"//block.mubble.smb_underwater_ground_block": "Ground Block (SMB - Underwater)",
+	"//block.mubble.smb_ghost_house_ground_block": "Ground Block (SMB - Ghost House)",
+	"//block.mubble.smb_airship_ground_block": "Ground Block (SMB - Airship)",
+	"//block.mubble.smb_night_airship_ground_block": "Ground Block (SMB - Night Airship)",
+	"//block.mubble.smb_castle_ground_block": "Ground Block (SMB - Castle)",
+	"//block.mubble.smb_desert_ground_block": "Ground Block (SMB - Desert)",
+	"//block.mubble.smb_forest_ground_block": "Ground Block (SMB - Forest)",
+	"//block.mubble.smb_snow_ground_block": "Ground Block (SMB - Snow)",
+	"//block.mubble.smb_night_snow_ground_block": "Ground Block (SMB - Night Snow)",
+	"//block.mubble.smb_sky_ground_block": "Ground Block (SMB - Sky)",
+	"//block.mubble.smw_ground_ground_block": "Ground Block (SMW - Ground)",
+	"//block.mubble.smw_underground_ground_block": "Ground Block (SMW - Underground)",
+	"//block.mubble.smw_underwater_ground_block": "Ground Block (SMW - Underwater)",
+	"//block.mubble.smw_ghost_house_ground_block": "Ground Block (SMW - Ghost House)",
+	"//block.mubble.smw_airship_ground_block": "Ground Block (SMW - Airship)",
+	"//block.mubble.smw_castle_ground_block": "Ground Block (SMW - Castle)",
+	"//block.mubble.smw_desert_ground_block": "Ground Block (SMW - Desert)",
+	"//block.mubble.smw_forest_ground_block": "Ground Block (SMW - Forest)",
+	"//block.mubble.smw_snow_ground_block": "Ground Block (SMW - Snow)",
+	"//block.mubble.smw_night_snow_ground_block": "Ground Block (SMW - Night Snow)",
+	"//block.mubble.smw_sky_ground_block": "Ground Block (SMW - Sky)",
+	"//block.mubble.smb3_ground_ground_block": "Ground Block (SMB3 - Ground)",
+	"//block.mubble.smb3_underground_ground_block": "Ground Block (SMB3 - Underground)",
+	"//block.mubble.smb3_underwater_ground_block": "Ground Block (SMB3 - Underwater)",
+	"//block.mubble.smb3_ghost_house_ground_block": "Ground Block (SMB3 - Ghost House)",
+	"//block.mubble.smb3_airship_ground_block": "Ground Block (SMB3 - Airship)",
+	"//block.mubble.smb3_night_airship_ground_block": "Ground Block (SMB3 - Night Airship)",
+	"//block.mubble.smb3_castle_ground_block": "Ground Block (SMB3 - Castle)",
+	"//block.mubble.smb3_night_castle_ground_block": "Ground Block (SMB3 - Night Castle)",
+	"//block.mubble.smb3_desert_ground_block": "Ground Block (SMB3 - Desert)",
+	"//block.mubble.smb3_snow_ground_block": "Ground Block (SMB3 - Snow)",
+	"//block.mubble.smb3_night_snow_ground_block": "Ground Block (SMB3 - Night Snow)",
+	"//block.mubble.smb3_sky_ground_block": "Ground Block (SMB3 - Sky)",
+	"//block.mubble.smb_empty_block": "Empty Block (SMB)",
+	"//block.mubble.smb3_empty_block": "Empty Block (SMB3)",
+	"//block.mubble.smw_empty_block": "Empty Block (SMW)",
+	"//block.mubble.nsmbu_empty_block": "Empty Block (NSMBU)",
+	"//block.mubble.smb_rotating_block": "Rotating Block (SMB)",
+	"//block.mubble.smb3_rotating_block": "Rotating Block (SMB3)",
+	"//block.mubble.smw_rotating_block": "Rotating Block (SMW)",
+	"//block.mubble.nsmbu_rotating_block": "Rotating Block (NSMBU)",
+	"//block.mubble.light_block": "Light Block",
+	"//block.mubble.smb_ground_brick_block": "Brick Block (SMB - Ground)",
+	"//block.mubble.smb_underground_brick_block": "Brick Block (SMB - Underground)",
+	"//block.mubble.smb_castle_brick_block": "Brick Block (SMB - Castle)",
+	"//block.mubble.smb_snow_brick_block": "Brick Block (SMB - Snow)",
+	"//block.mubble.smb_night_snow_brick_block": "Brick Block (SMB - Night Snow)",
+	"//block.mubble.smb3_brick_block": "Brick Block (SMB3)",
+	"//block.mubble.smw_brick_block": "Brick Block (SMW)",
+	"//block.mubble.nsmbu_brick_block": "Brick Block (NSMBU)",
+	"//block.mubble.smb_golden_brick_block": "Golden Brick Block (SMB)",
+	"//block.mubble.smb3_golden_brick_block": "Golden Brick Block (SMB3)",
+	"//block.mubble.smw_golden_brick_block": "Golden Brick Block (SMW)",
+	"//block.mubble.nsmbu_golden_brick_block": "Golden Brick Block (NSMBU)",
+	"//block.mubble.smb_ground_hard_block": "Hard Block (SMB - Ground)",
+	"//block.mubble.smb_underground_hard_block": "Hard Block (SMB - Underground)",
+	"//block.mubble.smb_underwater_hard_block": "Hard Block (SMB - Underwater)",
+	"//block.mubble.smb_castle_hard_block": "Hard Block (SMB - Castle)",
+	"//block.mubble.smb_snow_hard_block": "Hard Block (SMB - Snow)",
+	"//block.mubble.smb_night_snow_hard_block": "Hard Block (SMB - Night Snow)",
+	"//block.mubble.smb3_hard_block": "Hard Block (SMB3)",
+	"//block.mubble.smw_stone_hard_block": "Hard Block (SMW - Stone)",
+	"//block.mubble.smw_wood_hard_block": "Hard Block (SMW - Wood)",
+	"//block.mubble.nsmbu_hard_block": "Hard Block (NSMBU)",
+	"//block.mubble.smb_ice_block": "Ice Block (SMB)",
+	"//block.mubble.smb3_ice_block": "Ice Block (SMB3)",
+	"//block.mubble.smw_ice_block": "Ice Block (SMW)",
+	"//block.mubble.nsmbu_ice_block": "Ice Block (NSMBU)",
+	"//block.mubble.smb_note_block": "Note Block (SMB)",
+	"//block.mubble.smb3_note_block": "Note Block (SMB3)",
+	"//block.mubble.smw_note_block": "Note Block (SMW)",
+	"//block.mubble.nsmbu_note_block": "Note Block (NSMBU)",
+	"//block.mubble.smb_super_note_block": "Super Note Block (SMB)",
+	"//block.mubble.smb3_super_note_block": "Super Note Block (SMB3)",
+	"//block.mubble.smw_super_note_block": "Super Note Block (SMW)",
+	"//block.mubble.nsmbu_super_note_block": "Super Note Block (NSMBU)",
+	"//block.mubble.smb_door": "Door (SMB)",
+	"//block.mubble.smb3_door": "Door (SMB3)",
+	"//block.mubble.smw_door": "Door (SMW)",
+	"//block.mubble.nsmbu_door": "Door (NSMBU)",
+	"//block.mubble.smb_key_door": "Key Door (SMB)",
+	"//block.mubble.smb3_key_door": "Key Door (SMB3)",
+	"//block.mubble.smw_key_door": "Key Door (SMW)",
+	"//block.mubble.nsmbu_key_door": "Key Door (NSMBU)",
+
 	"block.mubble.fire_flower": "Vuur bloem",
 	"block.mubble.ice_flower": "IJs bloem",
 	"block.mubble.boomerang_flower": "Boomerang bloem",
@@ -632,6 +733,28 @@
 	"block.mubble.marble_zone_stone": "Marblezone steen",
 	"block.mubble.yellow_studiopolis_clapper": "Gele studiopolisklepel",
 	"block.mubble.blue_studiopolis_clapper": "Blauwe studiopolisklepel",
+
+	"//block.mubble.press_garden_planks": "Press Garden Planks",
+	"//block.mubble.pink_press_garden_sapling": "Pink Press Garden Sapling",
+	"//block.mubble.red_press_garden_sapling": "Red Press Garden Sapling",
+	"//block.mubble.press_garden_log": "Press Garden Log",
+	"//block.mubble.stripped_press_garden_log": "Stripped Press Garden Log",
+	"//block.mubble.press_garden_wood": "Press Garden Wood",
+	"//block.mubble.stripped_press_garden_wood": "Stripped Press Garden Wood",
+	"//block.mubble.pink_press_garden_leaves": "Pink Press Garden Leaves",
+	"//block.mubble.pink_press_garden_leaves_carpet": "Pink Press Garden Leaves Carpet",
+	"//block.mubble.red_press_garden_leaves": "Red Press Garden Leaves",
+	"//block.mubble.red_press_garden_leaves_carpet": "Red Press Garden Leaves Carpet",
+	"//block.mubble.press_garden_pressure_plate": "Press Garden Pressure Plate",
+	"//block.mubble.press_garden_trapdoor": "Press Garden Trapdoor",
+	"//block.mubble.press_garden_button": "Press Garden Button",
+	"//block.mubble.press_garden_stairs": "Press Garden Stairs",
+	"//block.mubble.press_garden_slab": "Press Garden Slab",
+	"//block.mubble.press_garden_vertical_slab": "Press Garden Vertical Slab",
+	"//block.mubble.press_garden_fence_gate": "Press Garden Fence Gate",
+	"//block.mubble.press_garden_fence": "Press Garden Fence",
+	"//block.mubble.press_garden_door": "Press Garden Door",
+
 	"block.mubble.spring": "Veer",
 
 
@@ -712,6 +835,8 @@
 	"block.mubble.potted_light_gray_mushroom": "Gepotte lichtgrijze paddenstoel",
 	"block.mubble.potted_gray_mushroom": "Gepotte grijze paddenstoel",
 	"block.mubble.potted_black_mushroom": "Gepotte zwarte paddenstoel",
+	"//block.mubble.potted_pink_press_garden_sapling": "Potted Pink Press Garden Sapling",
+	"//block.mubble.potted_red_press_garden_sapling": "Potted Red Press Garden Sapling",
 	"block.mubble.potted_scarlet_sapling": "Gepotte scharlakekiemplant",
 	"block.mubble.potted_scarlet_mushroom": "Gepotte scharlake paddenstoel",
 	"block.mubble.potted_scarlet_orchid": "Gepotte scharlake orchidee",
@@ -739,6 +864,7 @@
 	"item.mubble.banana": "Bannaan",
 	"item.mubble.apricot": "Abrikoos",
 	"item.mubble.mango": "Mango",
+	"//item.mubble.blueberries": "Blueberries",
 	"item.mubble.totem_of_ascending": "Totem der opstijging",
 
 
